--- a/Dockerfile.compose
+++ b/Dockerfile.compose
@@ -28,4 +28,4 @@ ENV explorerIP=${explorerIP}
 EXPOSE 4201
 
 USER root
-CMD [ "http-server", "./app", "-a", "se-iiotbox-explorer", "-p", "4201", "-c-1" ]
+CMD [ "http-server", "./app", "-a", "172.16.238.109", "-p", "4201", "-c-1" ]
